@@ -1,3 +1,7 @@
+2011-01-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/api.py: Added support for url_z and url_l.
+
 2011-01-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* flickr/__init__.py: Added new gconf key for rate of latest photos.
